--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,19 +1,20 @@
 ---
 import BlogLayout from "@/components/layouts/BlogLayout.astro";
 import { getEntry } from "astro:content";
-import type { CollectionEntry } from "astro:content"; // Import the type
+import type { CollectionEntry } from "astro:content";
 
 const { slug } = Astro.params;
 
-// Use the defined schema to ensure type safety
 const post: CollectionEntry<"blog"> | undefined = await getEntry(
   "blog",
   slug as string
 );
 
-// Utility function to format the date to MM-DD-YYYY without leading zero
+// Render the content
+const { Content } = post ? await post.render() : { Content: null };
+
 const formatDate = (date: Date) => {
-  const month = date.getMonth() + 1; // Months are 0-indexed
+  const month = date.getMonth() + 1;
   const day = date.getDate();
   const year = date.getFullYear();
   return `${month}-${day}-${year}`;
@@ -23,5 +24,7 @@ const formatDate = (date: Date) => {
 <BlogLayout id={post?.slug}>
   <h1>{post?.data.title}</h1>
   <time>{post ? formatDate(post.data.publishDate) : "Date not available"}</time>
-  <article>{post?.body}</article>
+  <article>
+    {Content ? <Content /> : <p>Content not available</p>}
+  </article>
 </BlogLayout>
