--- a/src/components/sections/Announcements.astro
+++ b/src/components/sections/Announcements.astro
@@ -4,7 +4,7 @@ const { isVisible } = Astro.props;
 
 {
   isVisible && (
-    <section class="flex bg-[#7F0201] font-bold tracking-widest text-white text-outline-white">
+    <section class="flex bg-[#7F0201] text-xs sm:text-sm md:text-base font-bold tracking-wider lg:tracking-widest text-white text-outline-white">
       <h2 class="mx-auto justify-between px-6 py-2">Announcements</h2>
     </section>
   )
