--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -2,18 +2,18 @@
   <img
     src="https://placehold.co/500x200"
     alt="PT Pet Supply logo"
-    class="pt-10 pb-96 drop-shadow-2xl"
+    class="min-[350px]:px-12 min-[450px]:px-16 min-[525px]:px-24 sm:px-32 lg:px-0 md:mx-0 pt-10 pb-96 drop-shadow-2xl"
   />
 
   <img
     src="/src/assets/mainecoon.png"
     alt="Maine Coon"
-    class="absolute bottom-0 left-0 md:pl-8 xl:pl-24 2xl:pl-48 3xl:pl-64 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
+    class="absolute bottom-0 left-0 min-[350px]:h-[400px] md:pl-8 xl:pl-24 2xl:pl-48 3xl:pl-64 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
   />
   <img
     src="/src/assets/husky.png"
     alt="Siberian Husky"
-    class="absolute bottom-0 right-0 md:pr-8 xl:pr-24 2xl:pr-48 3xl:pr-64 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
+    class="absolute bottom-0 right-0 min-[350px]:h-[400px] md:pr-8 xl:pr-24 2xl:pr-48 3xl:pr-64 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
   />
 
   <img
