--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -16,7 +16,7 @@ const defaultStaffList = getStaffList();
     class="inline-block p-6 font-bold text-4xl tracking-widest bg-[#7F0201] bg-opacity-80 text-white text-outline-white rounded-3xl"
     style={{ backdropFilter: "blur(35px)" }}
   >
-    Meet Our Team
+    Meet Our Pack
   </h3>
   <div class="flex justify-center py-5">
     <StaffCarousel staffList={defaultStaffList} client:idle />
