Responsive styling & initialize mobile sidebar

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -8,12 +8,12 @@
   <img
     src="/src/assets/mainecoon.png"
     alt="Maine Coon"
-    class="absolute bottom-0 left-0 min-[350px]:h-[400px] md:pl-8 xl:pl-24 2xl:pl-48 3xl:pl-64 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
+    class="absolute bottom-0 left-0 -ml-20 sm:-ml-10 md:-ml-28 min-[350px]:h-[400px] md:h-[600px] md:pl-8 xl:pl-24 2xl:pl-48 3xl:pl-64 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-52 md:-mb-80"
   />
   <img
     src="/src/assets/husky.png"
     alt="Siberian Husky"
-    class="absolute bottom-0 right-0 min-[350px]:h-[400px] md:pr-8 xl:pr-24 2xl:pr-48 3xl:pr-64 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-80"
+    class="absolute bottom-0 right-0 -mr-24 sm:-mr-14 md:-mr-32 min-[350px]:h-[400px] md:h-[600px] md:pr-8 xl:pr-24 2xl:pr-48 3xl:pr-64 drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-52 md:-mb-80"
   />
 
   <img
