--- a/src/components/sections/Links.astro
+++ b/src/components/sections/Links.astro
@@ -8,16 +8,16 @@ import Button from "../ui/Button.astro";
 const currentPage = Astro.url.pathname as LinksProps["currentPage"];
 ---
 
-<div class="flex items-center justify-between">
-  <!-- Regular buttons, visible in larger screens -->
-  <div class="hidden lg:flex font-bold lg:text-xl lg:space-x-4">
+<!-- Main container with Alpine.js logic -->
+<div x-data="{ open: false }" class="relative">
+  <div class="hidden xl:flex font-bold lg:text-xl lg:space-x-4">
     {
       currentPage == "/grooming" && (
         <Button
           transition:animate="slide"
           text="Home"
           href="/"
-          class="pl-4"
+          class="xl:pl-1 2xl:pl-4"
           data-astro-prefetch
         />
       )
@@ -26,22 +26,27 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
       transition:animate="slide"
       text="Products"
       href="/#products"
-      class="pl-4"
+      class="xl:pl-1 2xl:pl-4"
     />
     <Button
       transition:animate="slide"
       text="Our Pack"
       href="/#staff"
-      class="pl-4"
+      class="xl:pl-1 2xl:pl-4"
     />
-    <Button transition:animate="slide" text="Blog" href="/#blog" class="pl-6" />
+    <Button
+      transition:animate="slide"
+      text="Blog"
+      href="/#blog"
+      class="xl:pl-1 2xl:pl-4"
+    />
     {
       currentPage !== "/grooming" && (
         <Button
           transition:animate="slide"
           text="Pet Grooming"
           href="/grooming"
-          class="pl-4"
+          class="xl:pl-1 2xl:pl-4"
           data-astro-prefetch
         />
       )
@@ -49,9 +54,8 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
   </div>
 
   <!-- Hamburger Icon for mobile screens -->
-  <div class="lg:hidden">
+  <div class="xl:hidden">
     <button @click="open = true" class="p-2 sm:p-4">
-      <!-- Icon could be an SVG or lucide-react icon -->
       <svg
         class="w-6 h-6"
         fill="none"
@@ -67,10 +71,8 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
       </svg>
     </button>
   </div>
-</div>
 
-<!-- Sidebar controlled by Alpine.js -->
-<div x-data="{ open: false }">
+  <!-- Sidebar controlled by Alpine.js -->
   <div
     x-show="open"
     x-transition:enter="transition ease-out duration-300"
@@ -128,7 +130,7 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
           transition:animate="slide"
           text="Blog"
           href="/#blog"
-          class="pl-6"
+          class="pl-4"
         />
         {
           currentPage !== "/grooming" && (
@@ -150,7 +152,7 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
     x-show="open"
     x-transition.opacity
     @click="open = false"
-    class="fixed inset-0 bg-black opacity-50 z-40"
+    class="fixed inset-0 bg-black opacity-50 z-40 hidden"
   >
   </div>
 </div>
