--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -3,7 +3,7 @@
 ---
 
 <section id="about" class="xs:mx-10 sm:mx-14 md:mx-28 lg:mx-80 pt-28">
-  <h1 class="mx-24 pb-6 font-bold text-3xl tracking-widest">
+  <h1 class="mx-16 sm:mx-28 pb-6 font-bold text-3xl tracking-widest">
     Where Pets are People too
   </h1>
   <p class="mx-10">
