--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,8 +1,11 @@
-<section id="hero" class="relative mx-auto flex flex-col items-center">
+<section
+  id="hero"
+  class="relative mx-auto flex flex-col items-center h-80 md:h-auto"
+>
   <img
     src="https://placehold.co/500x200"
     alt="PT Pet Supply logo"
-    class="min-[350px]:px-12 min-[450px]:px-16 min-[525px]:px-24 sm:px-32 lg:px-0 md:mx-0 pt-10 pb-96 drop-shadow-2xl"
+    class="min-[350px]:px-12 min-[450px]:px-16 min-[525px]:px-24 sm:px-32 lg:px-0 md:mx-0 pt-4 md:pt-10 pb-96 drop-shadow-2xl"
   />
 
   <img
@@ -24,6 +27,6 @@
   <img
     src="/src/assets/fence.png"
     alt="Background picket fence"
-    class="absolute bottom-4 left-1/2 transform -translate-x-1/2 w-full h-[63%] max-w-none object-cover -mb-28 z-[-1]"
+    class="absolute bottom-10 md:bottom-4 left-1/2 transform -translate-x-1/2 w-full h-[63%] max-w-none object-cover -mb-28 z-[-1]"
   />
 </section>
