--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -33,7 +33,7 @@ const isMobile = md.mobile();
         isMobile ? (
           <a
             href={`tel:${phoneNumber}`}
-            class="min-[1150px]:w-base max-[1340px]:w-[135px] xl:tracking-wide"
+            class="max-[1150px]:w-[100px] max-[1340px]:w-[135px] xl:tracking-wide"
           >
             {phoneNumber}
           </a>
