Responsive styling & add StaffCarousel swipe controls

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -41,6 +41,7 @@ import Footer from "../sections/Footer.astro";
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
   }
   body {
     font-family: "Cenzo Flare", sans-serif;
