--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -67,7 +67,7 @@ const isMobile = md.mobile();
   </div>
 
   <div class="flex-1 flex justify-end">
-    <Links class="flex" />
+    <!-- <Links class="flex" /> -->
   </div>
 </section>
 
