--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -6,7 +6,10 @@ import { getStaffList } from "../../constants/StoreInfo.astro";
 const defaultStaffList = getStaffList();
 ---
 
-<section id="staff" class="relative py-10 tracking-wider text-center">
+<section
+  id="staff"
+  class="relative py-10 tracking-wider text-center overflow-hidden"
+>
   <img
     src="src/assets/panel.png"
     alt="Wood paneling background"
