--- a/src/components/sections/OpenStatus.astro
+++ b/src/components/sections/OpenStatus.astro
@@ -78,6 +78,6 @@ const storeStatus = getStoreStatus() as OpenStatusProps["storeStatus"];
   <Button
     text={storeStatus}
     href="/"
-    class="flex justify-center font-bold text-sm min-[520px]:text-md min-[580px]:text-lg lg:text-xl tracking-tighter min-[450px]:tracking-normal md:tracking-wide text-[#FFC66D] text-outline mt-3 min-[450px]:mt-2 min-[475px]:mt-3 min-[520px]:mt-4 min-[580px]:mt-3 sm:mt-3 lg:mt-4 min-[1340px]:mt-1"
+    class="flex justify-center font-bold text-sm min-[520px]:text-md min-[580px]:text-xl tracking-tighter min-[450px]:tracking-normal text-[#FFC66D] text-outline sm:-mt-2"
   />
 </div>
