--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -2,9 +2,11 @@
 
 ---
 
-<section id="products" class="mx-36 py-10 pt-10 min-h-[700px]">
-  <h3 class="mx-24 pb-6 font-bold text-3xl tracking-widest">Products</h3>
-  <p class="mx-10">
+<section id="products" class="lg:mx-36 py-10 pt-10 min-h-[700px]">
+  <h3 class="mx-10 lg:mx-24 pb-6 font-bold text-3xl tracking-widest">
+    Products
+  </h3>
+  <p class="mx-10 sm:mx-16 md:mx-28">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
     maecenas. Metus posuere consectetur non fermentum lacus eget tempor feugiat
     aenean. Lorem feugiat integer purus nullam penatibus faucibus semper
@@ -16,7 +18,7 @@
     porttitor eget mi nullam habitant fames odio sociis sed. Nunc velit dictum
     odio posuere hac senectus posuere lectus nullam?
   </p>
-  <div class="pt-8">
+  <div class="py-10">
     <ul class="grid grid-cols-2 gap-4 text-center">
       <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
       <li>Aliquam tincidunt mauris eu risus.</li>
