--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -2,11 +2,11 @@
 
 ---
 
-<section id="about" class="mx-1 sm:mx-14 md:mx-28 lg:mx-80 pt-28">
+<section id="about" class="mx-1 sm:mx-14 md:mx-28 lg:mx-64 pt-28">
   <h1
-    class="mx-10 min-[450px]:mx-16 md:mx-24 lg:mx-40 xl:mx-48 2xl:mx-64 3xl:mx-80 max-w-[450px] sm:mx-28 pb-6 font-bold text-3xl tracking-widest"
+    class="mx-10 min-[450px]:mx-16 md:mx-24 lg:mx-30 xl:mx-48 2xl:mx-64 3xl:mx-80 max-w-[450px] sm:mx-28 pb-6 font-bold text-3xl tracking-widest"
   >
-    Where Pets<br /><span class="pl-8">Are People Too</span>
+    Where Pets<br /><span class="pl-8 lg:pl-24">Are People Too</span>
   </h1>
   <p class="ml-8 mr-2 sm:ml-0 sm:mr-0 sm:mx-10">
     Lorem ipsum odor amet, consectetuer adipiscing elit. Id tincidunt augue quam
