--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -18,22 +18,22 @@ const isMobile = md.mobile();
 ---
 
 <section
-  class={`flex w-full min-h-[35px] mx-auto px-4 lg:px-10 pt-3 min-[1340px]:pt-6 pb-2 lg:pb-5 bg-[#FFC66D]`}
+  class="flex w-full min-h-[35px] mx-auto px-4 xl:px-10 pt-3 xl:pt-6 min-[1340px]:pt-6 pb-2 xl:pb-5 bg-[#FFC66D]"
 >
   <div
-    class="flex-1 min-[980px]:max-w-base max-[1024px]:max-w-[316px] pl-1 md:pl-4 lg:pl-0 space-y-2 lg:space-y-0 lg:flex lg:flex-nowrap font-bold text-sm lg:text-lg"
+    class="flex-1 min-[980px]:max-w-base max-[1024px]:max-w-[316px] xl:pl-0 sm:pt-1 lg:pt-0 space-y-2 lg:space-y-1 xl:space-y-0 xl:flex xl:flex-nowrap font-bold text-sm lg:text-lg"
   >
-    <div transition:persist class="flex items-center">
+    <div transition:persist class="flex items-center md:pl-4 xl:pl-0">
       <img
         src={phone.src}
         alt="phone"
-        class="pr-2 h-[16px] sm:h-[20px] lg:h-[34px]"
+        class="pr-2 h-[16px] sm:h-[20px] xl:h-[32px]"
       />
       {
         isMobile ? (
           <a
             href={`tel:${phoneNumber}`}
-            class="max-[1150px]:w-[100px] max-[1340px]:w-[135px] xl:tracking-wide"
+            class="max-[1150px]:w-[120px] max-[1280px]:w-[128px] xl:tracking-wide"
           >
             {phoneNumber}
           </a>
@@ -43,38 +43,42 @@ const isMobile = md.mobile();
       }
     </div>
 
-    <div transition:persist class="flex items-center lg:ml-4">
+    <div transition:persist class="flex items-center md:pl-4 xl:pl-0">
       <img
         src={mapPin.src}
         alt="GPS Pin"
-        class="pr-2 h-[16px] sm:h-[20px] lg:h-[34px]"
+        class="pr-2 min-[1280px]:pl-3 h-[16px] sm:h-[20px] xl:h-[34px]"
       />
       <a
         href="https://www.google.com/maps/place/P+T+Pet+Supply/@42.0714526,-71.8662691,17z/data=!3m1!4b1!4m6!3m5!1s0x89e41ed7234c136d:0xe30644b400274c0!8m2!3d42.0714526!4d-71.8662691!16s%2Fg%2F1tt1tq6m?entry=ttu&g_ep=EgoyMDI0MDkxNi4wIKXMDSoASAFQAw%3D%3D"
-        class="lg:text-xl lg:tracking-wide">{address}</a
+        class="text-sm lg:text-lg xl:tracking-wide">{address}</a
       >
     </div>
   </div>
 
-  <div class="relative flex flex-1 justify-center">
+  <!-- Flex container for centering -->
+  <div class="relative flex flex-1 justify-center items-center">
     <img
       src={openSignBackground.src}
       alt="Open/Close Sign Background"
       style="width: 195px; height: auto;"
-      class="absolute -mt-0 min-[450px]:-mt-1 min-[580px]:-mt-2 min-[605px]:-mt-2.5 sm:-mt-2 lg:-mt-1 min-[1340px]:-mt-4"
+      class="absolute top-0 left-1/2 transform -translate-x-1/2 min-[500px]:-mt-1 min-[535px]:-mt-1.5 min-[580px]:-mt-2.5 sm:-mt-1 xl:-mt-5"
     />
-    <OpenStatus transition:persist class="absolute" />
+    <OpenStatus
+      transition:persist
+      class="absolute inset-0 flex justify-center items-center"
+    />
   </div>
 
-  <div class="flex-1 flex justify-end">
-    <!-- <Links class="flex" /> -->
+  <div class="flex-1 flex justify-end my-auto">
+    <Links class="flex" />
   </div>
 </section>
 
 <!-- Client-side script for handling smallScreen -->
 <script>
   const updateLinksForSmallScreen = () => {
-    const mobileScreen = window.innerWidth < 900;
+    const mobileScreen = window.innerWidth < 768;
     const addressElement = document.querySelector(
       'a[href^="https://www.google.com/maps"]'
     ) as HTMLElement;
