Add StaffCarousel auto-sliding logic

--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -45,7 +45,7 @@ function convertTo12Hour(time24: string) {
         id="openModal"
         class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold py-2 px-4 rounded-xl"
       >
-        Contact Us
+        Message Us
       </button>
     </div>
   </div>
