--- a/src/components/sections/Links.astro
+++ b/src/components/sections/Links.astro
@@ -75,13 +75,14 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
   <!-- Sidebar controlled by Alpine.js -->
   <div
     x-show="open"
+    x-cloak
     x-transition:enter="transition ease-out duration-300"
     x-transition:enter-start="translate-x-full"
     x-transition:enter-end="translate-x-0"
     x-transition:leave="transition ease-in duration-300"
     x-transition:leave-start="translate-x-0"
     x-transition:leave-end="translate-x-full"
-    class="fixed top-0 right-0 w-3/4 max-w-full h-full bg-white shadow-lg transform z-50 xl:w-64 overflow-hidden"
+    class="fixed top-0 right-0 w-1/3 max-w-full h-full bg-white shadow-lg transform z-50 xl:w-64 overflow-hidden text-xl"
   >
     <div class="p-4">
       <!-- Close button -->
@@ -150,6 +151,7 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
   <!-- Backdrop for mobile -->
   <div
     x-show="open"
+    x-cloak
     x-transition.opacity
     @click="open = false"
     class="fixed inset-0 bg-black opacity-50 z-40"
