--- a/src/components/sections/Links.astro
+++ b/src/components/sections/Links.astro
@@ -159,4 +159,4 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
   </div>
 </div>
 
-<script src="//unpkg.com/alpinejs" defer></script>
+<script is:inline src="//unpkg.com/alpinejs" defer></script>
