--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -21,7 +21,7 @@ const isMobile = md.mobile();
   class="flex w-full min-h-[35px] mx-auto px-4 xl:px-10 pt-3 xl:pt-6 min-[1340px]:pt-6 pb-2 xl:pb-5 bg-[#FFC66D]"
 >
   <div
-    class="flex-1 min-[980px]:max-w-base max-[1024px]:max-w-[316px] xl:pl-0 sm:pt-2 lg:pt-0 space-y-2 lg:space-y-1 xl:space-y-0 xl:flex xl:flex-nowrap font-bold text-sm lg:text-lg"
+    class="flex-1 min-[980px]:max-w-base max-[1024px]:max-w-[316px] 2xl:ml-16 min-[1800px]:ml-36 min-[2100px]:ml-72 min-[2300px]:ml-96 xl:pl-0 sm:pt-2 lg:pt-0 space-y-2 lg:space-y-1 xl:space-y-0 xl:flex xl:flex-nowrap font-bold text-sm lg:text-lg"
   >
     <div transition:persist class="flex items-center md:pl-4 xl:pl-0">
       <img
@@ -70,7 +70,9 @@ const isMobile = md.mobile();
     />
   </div>
 
-  <div class="flex-1 flex justify-end my-auto">
+  <div
+    class="flex-1 flex justify-end my-auto 2xl:mr-16 min-[1800px]:mr-36 min-[2100px]:mr-72 min-[2300px]:mr-96"
+  >
     <Links class="flex" />
   </div>
 </section>
