--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section id="products" class="lg:mx-36 py-10 pt-10 min-h-[700px]">
+<section id="products" class="lg:mx-36 py-10 min-h-[700px]">
   <h3 class="mx-10 lg:mx-24 pb-6 font-bold text-3xl tracking-widest">
     Products
   </h3>
