--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -18,7 +18,7 @@
     porttitor eget mi nullam habitant fames odio sociis sed. Nunc velit dictum
     odio posuere hac senectus posuere lectus nullam?
   </p>
-  <div class="py-10">
+  <div class="mx-5 py-10">
     <ul class="grid grid-cols-2 gap-4 text-center">
       <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
       <li>Aliquam tincidunt mauris eu risus.</li>
