--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Contact from "../components/sections/Contact.astro";
     margin-left: auto;
     margin-right: auto;
   }
-  html {
+  body {
     scroll-behavior: smooth;
   }
 </style>
