--- a/src/components/ui/BlogPostCard.astro
+++ b/src/components/ui/BlogPostCard.astro
@@ -2,7 +2,6 @@
 import { markdownToTxt } from "markdown-to-txt";
 import type { CollectionEntry } from "astro:content";
 
-// Receive the post prop
 const { post }: { post?: CollectionEntry<"blog"> } = Astro.props;
 
 const plainTextBody = post ? markdownToTxt(post.body) : "";
@@ -13,11 +12,25 @@ const limitedPlainTextBody =
   (plainTextBody.split(" ").length > 50 ? "..." : "");
 ---
 
-<section class="my-auto">
-  <div>
-    <a href={`/blog/${post?.slug}/`}>{plainTextTitle}</a> -{" "}
+<section class="flex my-auto ml-4 px-2 drop-shadow-2xl">
+  <div
+    class="relative w-[350px] h-[200px] flex pt-8 rounded-3xl bg-[#FFC66D] bg-opacity-50"
+    style={{ backdropFilter: "blur(35px)" }}
+  >
+    <div class="absolute top-5 -left-8">
+      <img
+        src="https://placehold.co/350x350/png"
+        alt="Blog tag photo"
+        class="w-[110px] h-auto rounded-2xl"
+      />
+    </div>
+    <div class="ml-20 px-2">
+      <a href={`/blog/${post?.slug}/`} class="font-bold">{plainTextTitle}</a>{
+        " "
+      }
+      <p class="py-2">
+        {limitedPlainTextBody}
+      </p>
+    </div>
   </div>
-  <p>
-    {limitedPlainTextBody}
-  </p>
 </section>
