--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -62,7 +62,7 @@ const isMobile = md.mobile();
       src={openSignBackground.src}
       alt="Open/Close Sign Background"
       style="width: 195px; height: auto;"
-      class="absolute top-0 left-1/2 transform -translate-x-1/2 min-[500px]:-mt-1 min-[535px]:-mt-1.5 min-[580px]:-mt-2.5 sm:-mt-1 xl:-mt-5"
+      class="absolute top-0 left-1/2 transform -translate-x-1/2 min-[385px]:mt-1 min-[420px]:mt-0 min-[500px]:-mt-1 min-[535px]:-mt-1.5 min-[580px]:-mt-2.5 sm:-mt-1 xl:-mt-5"
     />
     <OpenStatus
       transition:persist
