--- a/src/components/sections/OpenStatus.astro
+++ b/src/components/sections/OpenStatus.astro
@@ -77,7 +77,7 @@ const storeStatus = getStoreStatus() as OpenStatusProps["storeStatus"];
 <div class="z-10">
   <Button
     text={storeStatus}
-    href="/#hero"
+    href="/#contact"
     class="flex justify-center font-bold text-sm min-[520px]:text-md min-[580px]:text-xl tracking-tighter min-[450px]:tracking-normal text-[#FFC66D] text-outline sm:-mt-2"
   />
 </div>
