--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -29,7 +29,9 @@ const recentPosts = uniquePosts.slice(0, 3);
     Recent Blog Posts
   </h3>
 
-  <div class="flex-row xl:flex lxl:mx-24 justify-center py-6 space-y-4">
+  <div
+    class="flex flex-col xl:flex-row xl:mx-24 justify-center items-center py-6 space-y-4"
+  >
     {recentPosts.map((post) => <BlogPostCard post={post} key={post.slug} />)}
   </div>
 
