--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -25,7 +25,8 @@ const convertTo12Hour = (time24: string) => {
 ---
 
 <section
-  class="flex-row-reverse md:flex md:flex-1 justify-center pt-20 lg:p-32 bg-[#FFC66D] min-h-[750px]"
+  id="contact"
+  class="flex-row-reverse md:flex md:flex-1 justify-center pt-20 md:pt-6 md:px-6 xl:px-32 2xl:px-64 bg-[#FFC66D] min-h-[750px]"
 >
   <div class="flex-1 text-center my-auto">
     <h3 class="font-bold text-3xl pb-3 tracking-widest">Store Hours</h3>
@@ -50,7 +51,7 @@ const convertTo12Hour = (time24: string) => {
     </div>
   </div>
 
-  <div class="flex flex-1 justify-center my-auto">
+  <div class="flex flex-1 justify-center m-auto">
     <Map />
   </div>
 </section>
