--- a/src/components/ui/Map.astro
+++ b/src/components/ui/Map.astro
@@ -5,7 +5,11 @@ const API_KEY = publicKey;
 const ADDRESS = "86 Worcester Rd, Webster, MA 01570";
 ---
 
-<div id="map" class="w-[80%] h-[350px] lg:h-[500px] rounded-2xl"></div>
+<div
+  id="map"
+  class="w-[70%] min-[600px]:w-[60%] md:w-[70%] h-[250px] md:h-[500px] rounded-2xl"
+>
+</div>
 
 <script define:vars={{ API_KEY, ADDRESS }}>
   async function initMap() {
