--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,3 +18,7 @@
 [x-cloak] {
   display: none !important;
 }
+
+html {
+  scroll-padding-top: 100px; /* Adjust this value based on your header height */
+}
