--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -22,6 +22,6 @@ const defaultStaffList = getStaffList();
     Meet Our Pack
   </h3>
   <div class="flex justify-center py-5">
-    <StaffCarousel staffList={defaultStaffList} client:idle />
+    <StaffCarousel staffList={defaultStaffList} client:visible />
   </div>
 </section>
