--- a/src/components/sections/Links.astro
+++ b/src/components/sections/Links.astro
@@ -82,13 +82,21 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
     x-transition:leave="transition ease-in duration-300"
     x-transition:leave-start="translate-x-0"
     x-transition:leave-end="translate-x-full"
-    class="fixed top-0 right-0 w-1/3 max-w-full h-full bg-white shadow-lg transform z-50 xl:w-64 overflow-hidden text-xl"
+    @click="open = false"
+    class="fixed top-0 right-0 w-2/3 md:w-1/4 max-w-full h-full bg-white shadow-lg transform z-50 xl:w-64 overflow-hidden text-xl"
   >
-    <div class="p-4">
+    <img
+      src="/src/assets/sidebar.png"
+      alt="Barn panelling"
+      class="absolute h-[100vh] w-[100vw] object-cover z-[-10] overflow-hidden"
+    />
+    <div class="p-2">
       <!-- Close button -->
-      <button @click="open = false" class="p-2">
+      <button
+        class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold p-1 rounded-xl"
+      >
         <svg
-          class="w-6 h-6"
+          class="w-8 h-8"
           fill="none"
           stroke="currentColor"
           viewBox="0 0 24 24"
@@ -103,14 +111,14 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
       </button>
 
       <!-- Sidebar Buttons -->
-      <div class="mt-6 flex flex-col space-y-4">
+      <div class="mt-8 pl-4 flex flex-col text-center space-y-4">
         {
           currentPage == "/grooming" && (
             <Button
               transition:animate="slide"
               text="Home"
               href="/"
-              class="pl-4"
+              class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold w-[80%] pl-4 p-2 rounded-xl"
               data-astro-prefetch
             />
           )
@@ -119,19 +127,19 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
           transition:animate="slide"
           text="Products"
           href="/#products"
-          class="pl-4"
+          class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold w-[80%] pl-4 p-2 rounded-xl drop-shadow-2xl"
         />
         <Button
           transition:animate="slide"
           text="Our Pack"
           href="/#staff"
-          class="pl-4"
+          class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold w-[80%] pl-4 p-2 rounded-xl drop-shadow-2xl"
         />
         <Button
           transition:animate="slide"
           text="Blog"
           href="/#blog"
-          class="pl-4"
+          class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold w-[80%] pl-4 p-2 rounded-xl drop-shadow-2xl"
         />
         {
           currentPage !== "/grooming" && (
@@ -139,7 +147,7 @@ const currentPage = Astro.url.pathname as LinksProps["currentPage"];
               transition:animate="slide"
               text="Pet Grooming"
               href="/grooming"
-              class="pl-4"
+              class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold w-[80%] pl-4 p-2 rounded-xl drop-shadow-2xl"
               data-astro-prefetch
             />
           )
