--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -22,9 +22,35 @@ const formatDate = (date: Date) => {
 ---
 
 <BlogLayout id={post?.slug}>
+  <div class="flex pt-3 pb-10 pl-4">
+    <button
+      id="go-back"
+      class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold py-2 px-4 rounded-xl"
+      >Go Back</button
+    >
+  </div>
+
   <h1>{post?.data.title}</h1>
   <time>{post ? formatDate(post.data.publishDate) : "Date not available"}</time>
+  <h3>{post?.data.tags}</h3>
   <article>
     {Content ? <Content /> : <p>Content not available</p>}
   </article>
 </BlogLayout>
+
+<style>
+  html {
+    max-width: 2136px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  body {
+    scroll-behavior: smooth;
+  }
+</style>
+
+<script>
+  document.getElementById("go-back")?.addEventListener("click", () => {
+    history.back();
+  });
+</script>
